--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "scripts": {
     "start": "set PORT=5000 & react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -42,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.1.0",
     "tailwindcss": "^3.3.5"
   }
 }
