--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "homepage": "http://omardoescode.github.io/Sudoku-Solver",
   "eslintConfig": {
     "extends": [
       "react-app",
